--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:text="Realm" />
 
                 <Button
@@ -96,7 +95,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:text="Room" />
 
                 <Button
@@ -119,7 +117,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:text="SQLite" />
 
                 <Button
@@ -139,6 +136,30 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Уд. все" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="RealmAsync" />
+
+                <Button
+                    android:id="@+id/btnSaveAllRealmAsync"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Сохр." />
+
+                <Button
+                    android:id="@+id/btnSelectAllRealmAsync"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Пок.все" />
+
+                <Button
+                    android:id="@+id/btnDeleteAllRealmAsync"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Уд. все" />
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
